@@ -15,8 +15,6 @@
  */
 package io.atlasmap.reference.xml_to_java;
 
-import static org.junit.Assert.*;
-
 import java.io.File;
 import java.util.Arrays;
 import java.util.List;
@@ -42,6 +40,11 @@ import io.atlasmap.v2.MappingType;
 import io.atlasmap.v2.Validation;
 import io.atlasmap.xml.v2.AtlasXmlModelFactory;
 import io.atlasmap.xml.v2.XmlField;
+
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertTrue;
 
 public class XmlJavaFlatMappingTest extends AtlasMappingBaseTest {
 
@@ -107,7 +110,7 @@ public class XmlJavaFlatMappingTest extends AtlasMappingBaseTest {
         Class<?> targetClazz = this.getClass().getClassLoader().loadClass(clazz.getName());
         BaseFlatPrimitiveClass newObject = (BaseFlatPrimitiveClass) targetClazz.newInstance();
 
-        newObject.setBooleanField(new Boolean(Boolean.FALSE));
+        newObject.setBooleanField(Boolean.valueOf(Boolean.FALSE));
         newObject.setByteField(new Byte((byte) 99));
         newObject.setCharField(new Character('a'));
         newObject.setDoubleField(new Double(50000000d));
@@ -123,7 +126,7 @@ public class XmlJavaFlatMappingTest extends AtlasMappingBaseTest {
         Class<?> targetClazz = this.getClass().getClassLoader().loadClass(clazz.getName());
         BaseFlatPrimitiveClass newObject = (BaseFlatPrimitiveClass) targetClazz.newInstance();
 
-        newObject.setBoxedBooleanField(new Boolean(Boolean.TRUE));
+        newObject.setBoxedBooleanField(Boolean.valueOf(Boolean.TRUE));
         newObject.setBoxedByteField(new Byte((byte) 87));
         newObject.setBoxedCharField(new Character('z'));
         newObject.setBoxedDoubleField(new Double(90000000d));
@@ -171,7 +174,7 @@ public class XmlJavaFlatMappingTest extends AtlasMappingBaseTest {
         assertEquals(new Integer(5), new Integer(targetObject.getBoxedIntField()));
         assertEquals(new Long(20000L), new Long(targetObject.getBoxedLongField()));
         assertEquals(new Short((short) 5), new Short(targetObject.getBoxedShortField()));
-        assertEquals(new Boolean(Boolean.TRUE), targetObject.getBoxedBooleanField());
+        assertEquals(Boolean.valueOf(Boolean.TRUE), targetObject.getBoxedBooleanField());
         // assertEquals(new Byte((byte) 87), new
         // Byte(targetObject.getBoxedByteField()));
         assertEquals(new Character('z'), new Character(targetObject.getBoxedCharField()));
